# fluid_rower_usb_monitor

./: .coverage  .gitignore  README.md  RELEASE.md  ROADMAP.md  config.example.yaml  config.yaml  pyproject.toml  rowing_analyzer.py  rowing_data.py  serial_conn.py  tox.ini
docs/: CONFIGURATION.md  DEVELOPER.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
fluid_rower_monitor/: __init__.py  columns.py  migrations.py  rowing_analyzer.py  rowing_data.py  serial_conn.py  settings.py
fluid_rower_monitor/api/: __init__.py  broadcaster.py  dependencies.py  main.py  middleware.py  models.py  session_manager.py
fluid_rower_monitor/api/routers/: config.py  live.py  sessions.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: app.css  app.d.ts  app.html
frontend/src/routes/: +page.svelte
tests/: test_api_broadcaster.py  test_api_config_router.py  test_api_dependencies.py  test_api_live_router.py  test_api_main.py  test_api_models.py  test_api_sessions_router.py  test_migrations.py  test_resilience.py  test_rowing_analyzer.py  test_rowing_data.py  test_schema_version.py  test_serial_conn.py  test_serial_conn_io.py  test_session_manager_api.py  test_settings.py  test_version.py
